0.04
 - Add some error checks to random_day() method.
 - Add some tests.
 - Fix LICENSE file.
 - Update Module::Install to 1.12 version.

0.03 2013-11-07
 - Add dependency for perl (based on Error::Pure).

0.02 2013-09-20
 - Fix NAME in doc.
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.01 2013-09-19
 - First version.