@@ -1,7 +1,8 @@
 TODO
 ====
 1. Osetrit spatne vstupy.
-2.
+2. Lze nejak lepe preposilat DateTime error?
+3.
 
 Applied
 =======
